# fbx2ogre

./: CMakeLists.txt  build.bat
CMake/: FindFBX.cmake  FindOGRE.cmake
